samples/_failures_safe/1761593096_ed9bf9_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_7694b75e.c: In function ‘main’:
./samples/SAFE/__tmp_7694b75e.c:179:13: error: expected expression at end of input
  179 |             const char* data =
      |             ^~~~~
./samples/SAFE/__tmp_7694b75e.c:179:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_7694b75e.c:179:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_7694b75e.c:179:13: error: expected declaration or statement at end of input
